Add:(Member):Implement registration endpoint and controller
