# routes/memberRoute.js
@@ -1,0 +1,9 @@
+// member route
+import express from 'express';
+import * as memberC from "../controllers/memberController.js";
+
+const router = express.Router();
+
+router.post('/register', memberC.createMember);
+
+export default router;
